# rag-evals

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  eval_thresholds.yaml  pyproject.toml
.github/workflows/: evals.yml
app/: README.md  gradio_app.py  requirements.txt  setup.sh
dashboards/: render.py
data/: golden.jsonl
data/corpus/: cross_encoder_rerank.md  eval_loops.md  hybrid_retrieval.md  observability.md  structured_outputs.md
src/rag_evals/: __init__.py  config.py  generate.py  ingest.py  observability.py  rerank.py  retrieve.py
src/rag_evals/eval/: golden.py  metrics.py  run.py
tests/: test_chunk.py  test_metrics.py
